first day for croatia

--- a/source/croatie/20190824.html.md
+++ b/source/croatie/20190824.html.md
@@ -1,55 +1,106 @@
 ---
+layout: post
 title: 24.08.2019
 trip: Croisière en Croatie
 trip_slug: croatie
 ---
 
-Levé 3:30 ça pique (Mathilde est encore bien fatiguée !!)
+Levé **3:30** ça pique (Mathilde est encore bien fatiguée !!)
 
-Les _Nantais_ prennent leur taxi rue Monge à 4:00. Elle était vraiment très bavarde (trottinettes, les Ubers, sa maman...) contrairement au taxi des _Parisiens_ (4:00 aussi) dont la seule info glanée fut qu'il était à la moitié de sa journée.
+Les _Nantais_ prennent leur taxi rue Monge à **4:00**. Elle était vraiment très bavarde (trottinettes, les Ubers, sa maman...) contrairement au taxi des _Parisiens_ (**4:00** aussi) dont la seule info glanée fut qu'il était à la moitié de sa journée.
 
-Arrivée à 4:25 à l'aéroport. La course entre les _Parisiens_ et les _Nantais_ pour le dépot de bagages en soute commence. Les _Parisiens_ coiffent au poteau les _Nantais_ de quelques minutes. S'ensuit des retrouvailles touchantes et chaleureuses.
+Arrivée à **4:25** à l'aéroport. La course entre les _Parisiens_ et les _Nantais_ pour le dépot de bagages en soute commence. Les _Parisiens_ coiffent au poteau les _Nantais_ de quelques minutes. S'ensuit des retrouvailles touchantes et chaleureuses.
 
 Passage de la sécurité animé par une course entre Julie et Ben. Suivit d'un petit dèj bien matinal pour réveiller les troupes vendu par un vendeur qui parlait bien du nez !
 
 L'avion était peu rempli, ce qui nous a permis de dormir chacun sur trois places, mieux qu'en 1ère.
 
-Côté Croate, Edwige se réveille à 6:45. Suite à petit dèj original à base de concombre, Ed se rend à l'aéroport récupérer le reste de l'équipe.
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/h_300/croatie/IMG-20190824-WA0004_nrbtx2.jpg" class="mx-auto"/>
+
+Côté Croate, Edwige se réveille à **6:45**. Suite à petit dèj original à base de concombre, Ed se rend à l'aéroport récupérer le reste de l'équipe.
 
 Atterrissage à l'heure et récupération des bagages sans encombre, même pour le fusil harpon d'Arnaud-Félix !
 
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/IMG-20190824-WA0005_mhbfci.jpg" class="mx-auto">
+
 L'équipage au complet se rend à la marina Mandalina à Sibenik.
 
-Arrivée à 10:00, l'agence nous annonce que le bateau sera disponible à 14:00 ! Petite bière pour établir le plan :
+<div id="map_sibenik" class="my-4 mx-auto" style="height: 300px; max-width: 600px"></div>
+<script>
+  document.addEventListener('DOMContentLoaded', (event) => {
+    const coordinates = [15.900324, 43.719157];
+    mapboxgl.accessToken = 'pk.eyJ1IjoiZ3VpZ3VpIiwiYSI6Im5ibEo4MWMifQ.pKwNm55XvYIIYHWSLgLqKg';
+    const map = new mapboxgl.Map({
+      container: 'map_sibenik',
+      style: 'mapbox://styles/mapbox/streets-v11',
+      center: coordinates,
+      zoom: 10
+    });
+
+    new mapboxgl.Marker()
+      .setLngLat(coordinates)
+      .addTo(map);
+  })
+</script>
+
+Arrivée à **10:00**, l'agence nous annonce que le bateau sera disponible à **14:00** ! Petite bière pour établir le plan :
 - une équipe courses
 - une équipe surveille les bagages
 
 Côté supermarché, tout le monde rajoute des bières dans le caddy, ça promet !
 
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/20190824_120140_h1bmpa.jpg" class="mx-auto">
+
 Côté marina, il fait déjà très chaud, c'est la lutte pour trouver une table avec un peu d'ombre.
 
 Retour des courses par taxi. Quelques pizzas et salades pour patienter.
 
-15:00 on monte enfin à bord !
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/20190824_104232_lzvkze.jpg" class="mx-auto">
+
+**15:00** on monte enfin à bord !
 
 Sako n'est pas encore disponible pour faire l'inventaire. On s'installe, on check de notre côté.
 
 Guillaume essaye d'aller chercher de la glace, en vain : Avoir 40 Kunas en billet de 50 ou 20, c'est pas facile !
 
-16:00 l'inventaire commence.
+**16:00** l'inventaire commence.
 
-Après le changement de GPS et l'installation d'un moteur hors-bord sur l'annexe, nous partons ! Il est 17:00.
+Après le changement de GPS et l'installation d'un moteur hors-bord sur l'annexe, nous partons ! Il est **17:00**.
 
 Direction notre premier mouillage en alternant voile et moteur. La manille d'écoute de Grand Voile casse au bout de vingt minutes... On sent que ce cata n'avance pas souvent à la voile !
+
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/20190824_170636_ockbvt.jpg" class="mx-auto">
 
 Le vent nous rafraîchit, ça fait du bien.
 
 Arrivée au mouillage à Zmajan côté nord dans le canal Zmajanski.
 
+<div id="map_zmajan" class="my-4 mx-auto" style="height: 300px; max-width: 600px"></div>
+<script>
+  document.addEventListener('DOMContentLoaded', (event) => {
+    const coordinates = [15.752652, 43.697904];
+    mapboxgl.accessToken = 'pk.eyJ1IjoiZ3VpZ3VpIiwiYSI6Im5ibEo4MWMifQ.pKwNm55XvYIIYHWSLgLqKg';
+    const map = new mapboxgl.Map({
+      container: 'map_zmajan',
+      style: 'mapbox://styles/mapbox/streets-v11',
+      center: coordinates,
+      zoom: 12
+    });
+
+    new mapboxgl.Marker()
+      .setLngLat(coordinates)
+      .addTo(map);
+  })
+</script>
+
 Tentative de sortie avec l'annexe, Guillaume ne maîtrise mal le 4 temps... finalement mouillage classique (on amarre pas le bateau à la côte).
 
 L'eau est turquoise et transparente, premier bain, c'est le bonheur !
 
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/IMG-20190824-WA0021_owemw1.jpg" class="mx-auto">
+
 Après un apéro Ukulélé, sublime filet mignon au riz cuisiné par notre chef AF, arrosé de bières et de Spritz. L'alcool n'ayant aucun effet sur Guigui, il n'alla pas chercher tout nu le bouchon de la bouteille de Proseco tombé dans l'eau.
+
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/IMG-20190824-WA0020_gswo5u.jpg" class="mx-auto">
 
 Yogourt bulgare puis Yams. Ben ayant fait 294 points, on va se coucher.
