--- a/source/croatie/20190825.html.md
+++ b/source/croatie/20190825.html.md
@@ -2,6 +2,7 @@
 title: 25.08.2019
 trip: Croisière en Croatie
 trip_slug: croatie
+draft: true
 ---
 
 Après une nuit au calme, petit dèj sous le soleil un peu couvert. Le frais fait du bien.
