--- a/source/croatie/20190824.html.md
+++ b/source/croatie/20190824.html.md
@@ -3,6 +3,7 @@ layout: post
 title: 24.08.2019
 trip: Croisière en Croatie
 trip_slug: croatie
+top_image: https://res.cloudinary.com/dsapqckal/image/upload/c_fill,g_auto,h_250,w_2560/c_scale,fl_relative/croatie/20190825_110157_dcurbl.jpg
 ---
 
 Levé **3:30** ça pique (Mathilde est encore bien fatiguée !!)
@@ -23,7 +24,7 @@ Atterrissage à l'heure et récupération des bagages sans encombre, même pour 
 
 <img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/IMG-20190824-WA0005_mhbfci.jpg" class="mx-auto">
 
-L'équipage au complet se rend à la marina Mandalina à Sibenik.
+L'équipage au complet se rend à la marina Mandalina à Šibenik.
 
 <div id="map_sibenik" class="my-4 mx-auto" style="height: 300px; max-width: 600px"></div>
 <script>
