--- a/source/croatie/20190825.html.md
+++ b/source/croatie/20190825.html.md
@@ -1,7 +1,9 @@
 ---
+layout: post
 title: 25.08.2019
 trip: Croisière en Croatie
 trip_slug: croatie
+top_image: https://res.cloudinary.com/dsapqckal/image/upload/c_fill,g_auto,h_250,w_2560/c_scale,fl_relative/croatie/20190825_110157_dcurbl.jpg
 draft: true
 ---
 
@@ -9,6 +11,54 @@ Après une nuit au calme, petit dèj sous le soleil un peu couvert. Le frais fai
 
 Petit bain matinal pour Ben, AF et Coco.
 
-Départ à 9:30 direction la marina de Murter : le filtre à café en sopalain fait du café un peu trop fort... et il nous faut un permis pour aller dans la réserve naturelle.
+Départ à **9:30** direction la marina de Murter : le filtre à café en sopalain fait du café un peu trop fort... et il nous faut un permis pour aller dans la réserve naturelle.
 
-11:00 Après un cours de noeuds donné par AF, nous arrivons au sud de l'île de Murter. Une équipe est envoyée au sol pendant que Ben, Coco et Guigui gardent le bateau et se baignent selon la coutume locale. Ed, Mathilde, Juju et AF se lance à la recherche d'un lieu vendant le fameux permis.
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/h_300/croatie/20190825_110210_dq48bv.jpg" class="mx-auto"/>
+
+**11:00** Après un cours de nœuds donné par AF, nous arrivons au sud de l'île de Murter. Une équipe est envoyée au sol pendant que Ben, Coco et Guigui gardent le bateau et se baignent selon la coutume locale. Ed, Mathilde, Juju et AF se lance à la recherche d'un lieu vendant le fameux permis.
+
+<div id="map_murter" class="my-4 mx-auto" style="height: 300px; max-width: 600px"></div>
+<script>
+  document.addEventListener('DOMContentLoaded', (event) => {
+    const coordinates = [15.592782, 43.802424];43.802424,
+    mapboxgl.accessToken = 'pk.eyJ1IjoiZ3VpZ3VpIiwiYSI6Im5ibEo4MWMifQ.pKwNm55XvYIIYHWSLgLqKg';
+    const map = new mapboxgl.Map({
+      container: 'map_murter',
+      style: 'mapbox://styles/mapbox/streets-v11',
+      center: coordinates,
+      zoom: 10
+    });
+
+    new mapboxgl.Marker()
+      .setLngLat(coordinates)
+      .addTo(map);
+  })
+</script>
+
+1h00 de marche sous le soleil de plomb (en mode course pour AF), l'équipe se restaure dans un petit resto fort sympatique après avoir trouvé le permis et les filtres à café (pas de trompette, c'est dimanche !)
+
+[photo]
+
+Après un bain de toute l'équipe, nous levons l'ance direction le parc Kornati (cap 210°).
+
+Navigation fort tranquile, lecture pour les uns, Ukulélé pour Mathile, cours de bare pour Coco, révisions des allures et du vocabulaire marin.
+
+**16:30** Coline vient de nous faire entrer dans le parc national de Kornati, elle a été obligée d'abattre nous a-t-elle dit.
+
+[croquis]
+
+**18:00** Arrivée au mouillage de Kameni Zakan.
+
+[map]
+
+Mer turquoise, eau à 30°C, petits poissons mignons. AF part à la chasse, objectif : 7 sept poissons pour le diner. Bain pour les autres, à une distance résonnable bien évidement. Puis... APÉRO !
+
+AF tire un poisson du premier coup ! Ça promet un diner faste. Malheureusement, au bout d'une heure sans autre prise, on se décide de faire cuire le poulet au four.
+
+**21:00** l'apéro est bien entamé, on a dégusté à sept le petit sar préparé par Edwige.
+
+Le poulet ne cuit pas. Plan B, Ben nous prépare des pâtes bolo.
+
+Le jeu du soir : Code Name. Ben et AF battent à plat de couture Juju et Guigui, malgré leur triche.
+
+Un dernier bain et au lit !
