--- a/source/croatie/20190830.html.md
+++ b/source/croatie/20190830.html.md
@@ -1,10 +1,8 @@
 ---
 layout: post
-title: 22.09.2019
-trip: Canada
-trip_slug: canada
+title: 30.08.2019
+trip: Croisière en Croatie
+trip_slug: croatie
 top_image: https://res.cloudinary.com/dsapqckal/image/upload/c_fill,g_auto,h_250,w_2560/c_scale,fl_relative/croatie/20190825_110157_dcurbl.jpg
 draft: true
 ---
-
-Prochainement...
