day 26 and refacto

--- a/source/croatie/20190824.html.md
+++ b/source/croatie/20190824.html.md
@@ -16,33 +16,17 @@ Passage de la sécurité animé par une course entre Julie et Ben. Suivit d'un p
 
 L'avion était peu rempli, ce qui nous a permis de dormir chacun sur trois places, mieux qu'en 1ère.
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/h_300/croatie/IMG-20190824-WA0004_nrbtx2.jpg" class="mx-auto"/>
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/h_600/croatie/IMG-20190824-WA0004_nrbtx2.jpg">
 
 Côté Croate, Edwige se réveille à **6:45**. Suite à petit dèj original à base de concombre, Ed se rend à l'aéroport récupérer le reste de l'équipe.
 
 Atterrissage à l'heure et récupération des bagages sans encombre, même pour le fusil harpon d'Arnaud-Félix !
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/IMG-20190824-WA0005_mhbfci.jpg" class="mx-auto">
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/IMG-20190824-WA0005_mhbfci.jpg">
 
 L'équipage au complet se rend à la marina Mandalina à Šibenik.
 
-<div id="map_sibenik" class="my-4 mx-auto" style="height: 300px; max-width: 600px"></div>
-<script>
-  document.addEventListener('DOMContentLoaded', (event) => {
-    const coordinates = [15.900324, 43.719157];
-    mapboxgl.accessToken = 'pk.eyJ1IjoiZ3VpZ3VpIiwiYSI6Im5ibEo4MWMifQ.pKwNm55XvYIIYHWSLgLqKg';
-    const map = new mapboxgl.Map({
-      container: 'map_sibenik',
-      style: 'mapbox://styles/mapbox/streets-v11',
-      center: coordinates,
-      zoom: 10
-    });
-
-    new mapboxgl.Marker()
-      .setLngLat(coordinates)
-      .addTo(map);
-  })
-</script>
+<div class="map" data-lng="43.719157" data-lat="15.900324"></div>
 
 Arrivée à **10:00**, l'agence nous annonce que le bateau sera disponible à **14:00** ! Petite bière pour établir le plan :
 - une équipe courses
@@ -50,13 +34,13 @@ Arrivée à **10:00**, l'agence nous annonce que le bateau sera disponible à **
 
 Côté supermarché, tout le monde rajoute des bières dans le caddy, ça promet !
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/20190824_120140_h1bmpa.jpg" class="mx-auto">
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/20190824_120140_h1bmpa.jpg">
 
 Côté marina, il fait déjà très chaud, c'est la lutte pour trouver une table avec un peu d'ombre.
 
 Retour des courses par taxi. Quelques pizzas et salades pour patienter.
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/20190824_104232_lzvkze.jpg" class="mx-auto">
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/20190824_104232_lzvkze.jpg">
 
 **15:00** on monte enfin à bord !
 
@@ -70,38 +54,22 @@ Après le changement de GPS et l'installation d'un moteur hors-bord sur l'annexe
 
 Direction notre premier mouillage en alternant voile et moteur. La manille d'écoute de Grand Voile casse au bout de vingt minutes... On sent que ce cata n'avance pas souvent à la voile !
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/20190824_170636_ockbvt.jpg" class="mx-auto">
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/20190824_170636_ockbvt.jpg">
 
 Le vent nous rafraîchit, ça fait du bien.
 
 Arrivée au mouillage à Zmajan côté nord dans le canal Zmajanski.
 
-<div id="map_zmajan" class="my-4 mx-auto" style="height: 300px; max-width: 600px"></div>
-<script>
-  document.addEventListener('DOMContentLoaded', (event) => {
-    const coordinates = [15.752652, 43.697904];
-    mapboxgl.accessToken = 'pk.eyJ1IjoiZ3VpZ3VpIiwiYSI6Im5ibEo4MWMifQ.pKwNm55XvYIIYHWSLgLqKg';
-    const map = new mapboxgl.Map({
-      container: 'map_zmajan',
-      style: 'mapbox://styles/mapbox/streets-v11',
-      center: coordinates,
-      zoom: 12
-    });
-
-    new mapboxgl.Marker()
-      .setLngLat(coordinates)
-      .addTo(map);
-  })
-</script>
+<div class="map" data-lng="43.697904" data-lat="15.752652"></div>
 
 Tentative de sortie avec l'annexe, Guillaume ne maîtrise mal le 4 temps... finalement mouillage classique (on amarre pas le bateau à la côte).
 
 L'eau est turquoise et transparente, premier bain, c'est le bonheur !
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/IMG-20190824-WA0021_owemw1.jpg" class="mx-auto">
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/IMG-20190824-WA0021_owemw1.jpg">
 
 Après un apéro Ukulélé, sublime filet mignon au riz cuisiné par notre chef AF, arrosé de bières et de Spritz. L'alcool n'ayant aucun effet sur Guigui, il n'alla pas chercher tout nu le bouchon de la bouteille de Proseco tombé dans l'eau.
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/IMG-20190824-WA0020_gswo5u.jpg" class="mx-auto">
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/IMG-20190824-WA0020_gswo5u.jpg">
 
 Yogourt bulgare puis Yams. Ben ayant fait 294 points, on va se coucher.
