--- a/source/croatie/20190826.html.md
+++ b/source/croatie/20190826.html.md
@@ -4,28 +4,33 @@ title: 26.08.2019
 trip: Croisière en Croatie
 trip_slug: croatie
 top_image: https://res.cloudinary.com/dsapqckal/image/upload/c_fill,g_auto,h_250,w_2560/c_scale,fl_relative/croatie/20190825_110157_dcurbl.jpg
-draft: true
 ---
 
-Aux alentours de **8:30** premiers bains. AF nous fait une nouvelle prise d'un petit sar qui partira à l'apéro.
+Aux alentours de **8:30** premiers bains.
+
+{video}(croatie/GOPR0712_1567784069469_sptwb9)
+
+AF nous fait une nouvelle prise d'un petit sar qui partira à l'apéro.
 
 Ed partie en repérage sur la petite île nous signale qu'elle est bien polluée de plastique et autres déchets. L'équipage se décide alors de partir munit de sacs au nettoyage du terrain. Dix sacs entiers seront rapportés à bord.
 
 On repart pour une séance de snorkling, admirer les beaux poissons jaunes, verts, bleus.
 
-[croquis]
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/20190906_160738_dq6gfe.jpg">
 
 **11:00** départ vers Korta, session blind-test de la chanson française.
 
 Uvala Rasip fut notre lieu de mouillage de midi.
 
-[map]
+<div class="map" data-lng="43.779274" data-lat="15.307941"></div>
 
 Excellent wraps au poulet préparés pra AF et Mathilde.
 
 Sieste, lecture, plongées... Ben se lance dans la chasse sous-marine. Son premier essai est peu concluant.
 
 Session captation vidéo GoPro© avant de partir vers la marina de Vrulje.
+
+{video-autoplay}(croatie/GOPR0759_1567779594209_high_sxwelf)
 
 Quelques virements de bord, oui nous avançons à la voile contrairement à ce matin, cours de tricot pour Mathilde dispensé par Coco.
 
@@ -41,11 +46,13 @@ Quelques virements de bord, oui nous avançons à la voile contrairement à ce m
 
 Arrivée sportive mais faite !
 
+<div class="map" data-lng="43.811537" data-lat="15.300487"></div>
+
 Douches à quai, apéro. Le serveur nous apporte le menu à bord et nous prend la commande. Le diner sera servit à **21:00** nous annonce-t-il.
 
 Yatse pour patienter, agrémenté d'oursins qu'Edwige nous a préparé après avoir demandé conseil au cuisinier du restaurant.
 
-[TimeLapse]
+{video}(croatie/GOPR1134_1567783783015_high_pdnukl)
 
 Edwige remporte la partie avec 244 points ! L'heure du diner sonne.
 
@@ -53,10 +60,12 @@ Installés à notre table, nous nous retrouvons entre trois styles musicaux ! Le
 
 Cocktails, amuses bouches, entrées et plats s'enchainent. On se régale.
 
-[photo]
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640,a_ignore/croatie/20190826_213310_bnrgwt.jpg">
 
 Toujours difficile de devoir supporter la playlist croate... Petits desserts à partager puis digeo offert par la maison, à base de miel, _un vrai médicament !_
 
-Les croates mélomanes ayant recommdander une ennième bouteille de vodka, nous prenons la décision de quitter nos hôtes.
+Les croates mélomanes ayant recommander une ennième bouteille de vodka, nous prenons la décision de quitter nos hôtes.
+
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640,a_ignore/croatie/20190826_233640_tk9nyp.jpg">
 
 L'équipage se couche. Il est minuit, les plus courrageux ont décidé de se lever à **5:30** pour aller admirer le lever du soleil en haut de la colline voisine !
