--- a/source/croatie/20190827.html.md
+++ b/source/croatie/20190827.html.md
@@ -9,23 +9,51 @@ draft: true
 
 _Récit de Julie :_
 
-<div class="bloc-notes text-purple-900 p-4 shadow-md">
+<div class="bloc-notes text-purple-900 p-4 mb-4 shadow-md">
   <p>Levé 5h20 (bon en vrai 4h00 à cause du bruit des <em>bouts</em> et des chants autrichiens).</p>
   <p>Objectif : petite rando de 35 minutes pour observer le lever du soleil au dessus de la mer.</p>
   <p>Dans les dix premières minutes, je comprends que ma vie va être en jeu. En effet, j'ai suivi Mathilde, Edwige et Arnaud-Félix comme une fleur sans tenir compte que ceux qui les connaissent le plus ont décliné leur invitation.</p>
   <p>Première colline atteinte : je suis trop fière (j'ai pris sur moi, je n'ai pas râlé et j'ai réussi. Ben en fait non c'était juste une pause pour que je me remette à leur niveau 😅</p>
   <p>Nous voilà parti à l'assaut de la seconde montagne : chardons, escalade, ronces, petits cailloux, gros cailloux : je suis lassée, l'ardoise est chargée. Ma coach de rando ne me lache pas.</p>
-  <p>Edwige : <em>Vas-y Julie, à gauche, à droite, pas plus de trois appuis</em></p>
-  <p>AF : <em>Pense biquette</em></p>
+  <p>Edwige : <em class="text-purple-600">Vas-y Julie, à gauche, à droite, pas plus de trois appuis</em></p>
+  <p>AF : <em class="text-purple-600">Pense biquette</em></p>
   <p>À ce moment là tu comprends que t'es le maillon faible mais qu'on ne t'abandonnera pas.</p>
   <p>Et la délivrance, arrviée à 6h50 et vue magnifique (j'ai posté la photo sur insta suivez-moi et vous la verrez).</p>
   
-  <div class="flex justify-center">
-    <a href="https://www.instagram.com/julie.fievet/" target="_blank" rel="noopener noreferrer" class="bg-blue-800 p-3 font-sans text-blue-100 rounded flex">
+  <div class="flex justify-center mb-4">
+    <a href="https://www.instagram.com/julie.fievet/" target="_blank" rel="noopener noreferrer" class="bg-blue-800 p-3 font-sans text-blue-100 rounded flex btn">
       <svg class="w-6 mr-2" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="instagram" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg>
       <div>Follow @julie.fievet</div>
     </a>
   </div>
-  <p></p>
-  <p></p>
+  <p>En prime, ma coach m'a ramené mes clopes pour que j'apprécie encore plus l'instant (bon paquet vide ➞ big loose mais attention tellement choute que je serre les dents 😬)</p>
+  <p>10 min de pause, 3 bananes, 5 cookies, les yeux remplis d'images magnifiques, nous repartons pour la descente.</p>
+  <p>Je fus la première à tomber (mollet défoncé et doigt arraché) mais je me relève et continue presque gaiement.</p>
+  <p>Quelques instants après complimenté Mathilde sur l'état de ses jambes comparées aux miennes, elle se rétame(je dirais pas que je porte la poisse mais un peu quand même.)</p>
+  <p>8h10, nous retrouvons notre cata, rincés mais put*** de content.</p>
+  <p class="text-center">MISSION ACCOMPLIE ♥</p>
 </div>
+
+_Fin du récit de Julie_
+
+Petit dèj à **8:30**, AF aime bien les tartines aux champis.
+
+Mission débouchage 💩 pour Guigui puis nous partons vers de nouvelles aventures !
+
+Nous trouvons un petit spot bien sympatique, nous reprenons nos habitudes&nbsp;: baignade, palme-masque-tubat... mais au moment de commencer notre partie de Code Name, nous sommes interrompu par les gardes du parc : nous ne sommes plus dans le bon parc, à Aba Vela !
+
+[map]
+
+Nous sommes alors contraints de quitter les lieux sous peine de payer pour un nouveau parc. Nous trouvons finalement un endroit au top dans le bon parc ! Edwige nous régale avec une délicieuse salade de riz. Sieste bien méritée pour tout le monde (surtout l'équipe des lèves-tôt !).
+
+Nous repartons ensuite faire de la voile au près le long de superbes falaises à l'ouest du parc.
+
+Puis nous cherchons un lieu pour la nuit. Notre premier choix se porte sur une petite île ressemblant un peu à celle de Tintin et l'île Noire. Malheureusement le fond rocheux, piège à ancre, nous empêche de nous installer. Nous allons donc juste derrière&nbsp;: plus de monde mais fond sableux. Nous inaugurons le double amarrage : ancre + amarre à la côte.
+
+Soirée mexicaine : Nachos + Fajitas ! Jeu du soir : Tarot. Coline aura le petit à chaque manche et Julie sera appelée à chaque manche !
+
+Le ciel est splendide, on voit très bien le nuage de la voie lactée.
+
+Coucher. Calme, clapoti de l'eau... Arnaud-Félix en profite pour aller se soulager. Coline ne s'attendait pas à le voir dans sa tenu d'Adam !
+
+_La nuit fut très humide se rapelle le téléphone de Mathilde._
