--- a/source/croatie/20190825.html.md
+++ b/source/croatie/20190825.html.md
@@ -12,71 +12,39 @@ Petit bain matinal pour Ben, AF et Coco.
 
 Départ à **9:30** direction la marina de Murter : le filtre à café en sopalain fait du café un peu trop fort... et il nous faut un permis pour aller dans la réserve naturelle.
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/20190825_110210_dq48bv.jpg" class="mx-auto"/>
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/20190825_110210_dq48bv.jpg">
 
 **11:00** Après un cours de nœuds donné par AF, nous arrivons au sud de l'île de Murter. Une équipe est envoyée au sol pendant que Ben, Coco et Guigui gardent le bateau et se baignent selon la coutume locale. Ed, Mathilde, Juju et AF se lance à la recherche d'un lieu vendant le fameux permis.
 
-<div id="map_murter" class="my-4 mx-auto" style="height: 300px; max-width: 600px"></div>
-<script>
-  document.addEventListener('DOMContentLoaded', (event) => {
-    const coordinates = [15.592782, 43.802424];
-    mapboxgl.accessToken = 'pk.eyJ1IjoiZ3VpZ3VpIiwiYSI6Im5ibEo4MWMifQ.pKwNm55XvYIIYHWSLgLqKg';
-    const map = new mapboxgl.Map({
-      container: 'map_murter',
-      style: 'mapbox://styles/mapbox/streets-v11',
-      center: coordinates,
-      zoom: 10
-    });
-
-    new mapboxgl.Marker()
-      .setLngLat(coordinates)
-      .addTo(map);
-  })
-</script>
+<div class="map" data-lng="43.802424" data-lat="15.592782"></div>
 
 Une heure de marche sous le soleil de plomb (en mode course pour AF), l'équipe se restaure dans un petit resto fort sympatique après avoir trouvé le permis et les filtres à café (pas de trompette, c'est dimanche !)
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/WhatsApp_Image_2019-08-25_at_13.35.39_ciajbb.jpg" class="mx-auto"/>
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/WhatsApp_Image_2019-08-25_at_13.35.39_ciajbb.jpg">
 <p class="text-center -mt-4"><em>une partie de l'équipe course</em></p>
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/WhatsApp_Image_2019-08-30_at_19.13.47_un8roa.jpg" class="mx-auto"/>
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/WhatsApp_Image_2019-08-30_at_19.13.47_un8roa.jpg">
 <p class="text-center -mt-4"><em>une partie de l'équipe bateau</em></p>
 
 Après un bain de toute l'équipe, nous levons l'ance direction le parc Kornati (cap 210°).
 
 Navigation fort tranquile, lecture pour les uns, Ukulélé pour Mathile, cours de bare pour Coco, révisions des allures et du vocabulaire marin.
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/20190825_163359_tukqor.jpg" class="mx-auto"/>
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/20190825_163359_tukqor.jpg">
 
 **16:30** Coline vient de nous faire entrer dans le parc national de Kornati, elle a été obligée d'abattre nous a-t-elle dit.
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/20190905_121624_lpwexb.jpg" class="mx-auto"/>
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/20190905_121624_lpwexb.jpg">
 
 **18:00** Arrivée au mouillage de Kameni Žakan.
 
-<div id="map_kameni_zakan" class="my-4 mx-auto" style="height: 300px; max-width: 600px"></div>
-<script>
-  document.addEventListener('DOMContentLoaded', (event) => {
-    const coordinates = [15.434835, 43.718643];
-    mapboxgl.accessToken = 'pk.eyJ1IjoiZ3VpZ3VpIiwiYSI6Im5ibEo4MWMifQ.pKwNm55XvYIIYHWSLgLqKg';
-    const map = new mapboxgl.Map({
-      container: 'map_kameni_zakan',
-      style: 'mapbox://styles/mapbox/streets-v11',
-      center: coordinates,
-      zoom: 10
-    });
-
-    new mapboxgl.Marker()
-      .setLngLat(coordinates)
-      .addTo(map);
-  })
-</script>
+<div class="map" data-lng="43.718643" data-lat="15.434835"></div>
 
 Mer turquoise, eau à 30°C, petits poissons mignons. AF part à la chasse, objectif : 7 sept poissons pour le diner. Bain pour les autres, à une distance résonnable bien évidement. Puis... APÉRO !
 
 AF tire un poisson du premier coup ! Ça promet un diner faste.
 
-<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_600/croatie/20190825_185209_wohtuy.jpg" class="mx-auto"/>
+<img src="https://res.cloudinary.com/dsapqckal/image/upload/w_640/croatie/20190825_185209_wohtuy.jpg">
 
 Malheureusement, au bout d'une heure sans autre prise, on se décide de faire cuire le poulet au four.
 
