--- a/source/croatie/20190827.html.md
+++ b/source/croatie/20190827.html.md
@@ -4,7 +4,6 @@ title: 27.08.2019
 trip: Croisière en Croatie
 trip_slug: croatie
 top_image: https://res.cloudinary.com/dsapqckal/image/upload/c_fill,g_auto,h_250,w_2560/c_scale,fl_relative/croatie/20190825_110157_dcurbl.jpg
-draft: true
 ---
 
 _Récit de Julie :_
@@ -27,10 +26,23 @@ _Récit de Julie :_
     </a>
   </div>
   <p>En prime, ma coach m'a ramené mes clopes pour que j'apprécie encore plus l'instant (bon paquet vide ➞ big loose mais attention tellement choute que je serre les dents 😬)</p>
-  <p>10 min de pause, 3 bananes, 5 cookies, les yeux remplis d'images magnifiques, nous repartons pour la descente.</p>
-  <p>Je fus la première à tomber (mollet défoncé et doigt arraché) mais je me relève et continue presque gaiement.</p>
-  <p>Quelques instants après complimenté Mathilde sur l'état de ses jambes comparées aux miennes, elle se rétame(je dirais pas que je porte la poisse mais un peu quand même.)</p>
-  <p>8h10, nous retrouvons notre cata, rincés mais put*** de content.</p>
+
+  <div class="flex">
+    <div class="pr-6">
+    <p>10 min de pause, 3 bananes, 5 cookies, les yeux remplis d'images magnifiques, nous repartons pour la descente.</p>
+    <p>Je fus la première à tomber (mollet défoncé et doigt arraché) mais je me relève et continue presque gaiement.</p>
+    <p>Quelques instants après complimenté Mathilde sur l'état de ses jambes comparées aux miennes, elle se rétame(je dirais pas que je porte la poisse mais un peu quand même.)</p>
+    <p>8h10, nous retrouvons notre cata, rincés mais put*** de content.</p>
+    </div>
+    <div>
+      <a href ="https://res.cloudinary.com/dsapqckal/image/upload/croatie/WhatsApp_Image_2019-09-04_at_15.08.05_myxmrj.jpg">
+        <img src="https://res.cloudinary.com/dsapqckal/image/upload/w_300/croatie/WhatsApp_Image_2019-09-04_at_15.08.05_myxmrj.jpg">
+      </a>
+      <p class="pt-3"><em>Photo de mes blessures de guerre pour alimenter mon recit sur le blog</em></p>
+    </div>
+  </div>
+
+  
   <p class="text-center">MISSION ACCOMPLIE ♥</p>
 </div>
 
@@ -40,17 +52,25 @@ Petit dèj à **8:30**, AF aime bien les tartines aux champis.
 
 Mission débouchage 💩 pour Guigui puis nous partons vers de nouvelles aventures !
 
-Nous trouvons un petit spot bien sympatique, nous reprenons nos habitudes&nbsp;: baignade, palme-masque-tubat... mais au moment de commencer notre partie de Code Name, nous sommes interrompu par les gardes du parc : nous ne sommes plus dans le bon parc, à Aba Vela !
+![](https://res.cloudinary.com/dsapqckal/image/upload/w_824/croatie/20190827_112427_yqco8b.jpg)
 
-[map]
+Nous trouvons un petit spot bien sympatique, nous reprenons nos habitudes : baignade, palme-masque-tubat... mais au moment de commencer notre partie de Code Name, nous sommes interrompu par les gardes du parc : nous sommes à Telašćica, ce n'est plus dans le bon parc !
+
+<div class="map" data-lng="43.906046" data-lat="15.157796"></div>
 
 Nous sommes alors contraints de quitter les lieux sous peine de payer pour un nouveau parc. Nous trouvons finalement un endroit au top dans le bon parc ! Edwige nous régale avec une délicieuse salade de riz. Sieste bien méritée pour tout le monde (surtout l'équipe des lèves-tôt !).
 
 Nous repartons ensuite faire de la voile au près le long de superbes falaises à l'ouest du parc.
 
+![](https://res.cloudinary.com/dsapqckal/image/upload/w_824/croatie/WhatsApp_Image_2019-08-31_at_15.06.59_myazjg.jpg)
+<br>
+![](https://res.cloudinary.com/dsapqckal/image/upload/w_824/croatie/WhatsApp_Image_2019-08-31_at_15.05.33_q26axm.jpg)
+
 Puis nous cherchons un lieu pour la nuit. Notre premier choix se porte sur une petite île ressemblant un peu à celle de Tintin et l'île Noire. Malheureusement le fond rocheux, piège à ancre, nous empêche de nous installer. Nous allons donc juste derrière&nbsp;: plus de monde mais fond sableux. Nous inaugurons le double amarrage : ancre + amarre à la côte.
 
-Soirée mexicaine : Nachos + Fajitas ! Jeu du soir : Tarot. Coline aura le petit à chaque manche et Julie sera appelée à chaque manche !
+<div class="map" data-lng="43.820323" data-lat="15.247133"></div>
+
+Soirée mexicaine : Nachos + Fajitas 🌮 ! Jeu du soir : Tarot. Coline aura le petit à chaque manche et Julie sera appelée à chaque manche !
 
 Le ciel est splendide, on voit très bien le nuage de la voie lactée.
 
