--- a/source/croatie/20190828.html.md
+++ b/source/croatie/20190828.html.md
@@ -6,3 +6,52 @@ trip_slug: croatie
 top_image: https://res.cloudinary.com/dsapqckal/image/upload/c_fill,g_auto,h_250,w_2560/c_scale,fl_relative/croatie/20190825_110157_dcurbl.jpg
 draft: true
 ---
+
+AF parti à la chasse de bonne heure. Il nous rapportera le troisième poisson de la semaine ! Le plus gros de tous et c'est une daurade 😋.
+
+Baignade, balade sur l'île. Séances vidéos et photos de plongeons des garçons. Ben retrouva l'élastique de Julie du premier coup alors que Guigui et Mathilde le cherchaient depuis une demi-heure dans l'eau : il était sur le bateau !
+
+Gros ménage par Ben après que Coline a craché son café :
+
+Guillaume : _Cité turque en trois lettre ?_
+Ben : _Abidjan !_
+
+Nous faisons le bilan des sotcks de vivres : il nous faut de la bière et de la viande ! Direction la civilisation pour trouver ces denrées.
+
+La routine de bord reprend :
+
+Edwige au Ukulélé
+
+![Edwige au Ukulélé]()
+
+Mathilde et Coco au tricot
+
+![Mathilde et Coco au tricot]()
+
+Juju aux mots croisés
+
+![Juju aux mots croisés]()
+
+Arnaud-Félix à la barre
+
+![Arnaud-Félix à la barre]()
+
+Ben bouqine
+
+![Ben bouqine]()
+
+Guigui rédige le journal de voyage
+
+![Guigui rédige le journal de voyage]()
+
+Nous arrivons au port de Sali.
+
+[map]
+
+Juju, Coco et Ben se porte volontaires pour la mission courses. À bord on commence l'apéro et on prépare la daurade.
+
+Nous repartons juste après le déjeuner. _Edwige se rappelle bien du menu, elle l'a vue deux fois._
+
+Nous arrivons dans le plus beau spot des vacances à ce jour. Le deuxième essai pour le mouillage sera le bon. Baignade, bronzage, tarot, Code Name (Guigui n'a toujours pas gagné une partie...).
+
+Coline nous prépare un bon petit plat. S'en suit un tarot qui sera largement gagné par Juju.
