--- a/source/croatie/20190829.html.md
+++ b/source/croatie/20190829.html.md
@@ -6,3 +6,31 @@ trip_slug: croatie
 top_image: https://res.cloudinary.com/dsapqckal/image/upload/c_fill,g_auto,h_250,w_2560/c_scale,fl_relative/croatie/20190825_110157_dcurbl.jpg
 draft: true
 ---
+
+Après le petit dèj et la deuxième tournée de café (un peu serré), nous nous préparons pour l'expedition du jour.
+
+Pendant que Coline garde le bateau, nous nous mettons à l'assaut de la colline qui surmonte notre mouillage. Le terrain est _plus facile_ que la rando précédente selon les experts. Après les cailloux, crottins de moutons sauvages (moutons observés à la torche la veille) et de thym, nous arrivons au sommet. La vue est magnifique. Nous voyons tout la baie de notre mouillage et le bras de mer de l'Adriatique sans ride, en effet il n'y a pas de vent : il fait donc très chaud !
+
+Sur le retour, deux groupes se forment : plage pour l'un, saut d'une petite falaise pour l'autre.
+
+Quelques cailloux et ronces plus tart, AF, Ben, Juju et Guigui sautent à l'eau rejoignant ainsi Coco qui faisait ses longueures dans la baie.
+
+Déjeuner, vidage de pastèque, tentatives de passerelle flottantes et nous repartons.
+
+![tentatives de passerelle flottantes]()
+
+Belle sieste au calme, le vent étant faible mais portant. Arrivée pas loin de notre mouillage du matin, nous privilégions le paysage au confort.
+
+Mouillage _à la terre_ du premier coup : on commence à maîtriser.
+
+Sieste agitée ar Julie et Ben qui commence à créer un radeau avec les par-battages et les passerelles. Arnaud-Félix intervient. Le modèle final n'est pas si fiable. Il ne faudra pas qu'on coule...
+
+Puis aprèm classique : tarot, tour de baie à palmes, spectacle des voisins qui essayent de s'ammarrer, en vain : nous serons le seul bateau à ce mouillage ce soir.
+
+Apéro ! Ben poussera AF et Guigui à l'eau, faisant d'une pierre deux coups !
+
+Délicieux poulet-patates et salades d'endives : le grand luxe !
+
+Après le dessert, Coline nous fera une acrobatie qui lui imposera de dormir avec une canette de bière toute la nuit...
+
+Ben remporte haut la main la partie de Yams grâce à Mathilde qui lui serva un Yams : 312 points, score proche de la perfection !
