--- a/source/croatie/20190830.html.md
+++ b/source/croatie/20190830.html.md
@@ -6,3 +6,26 @@ trip_slug: croatie
 top_image: https://res.cloudinary.com/dsapqckal/image/upload/c_fill,g_auto,h_250,w_2560/c_scale,fl_relative/croatie/20190825_110157_dcurbl.jpg
 draft: true
 ---
+
+Petit dèj anglais : Oeufs, jambon, fromage miam. _Mais nooooonnn !!!!_
+
+Petite baignade mais on ne traine pas trop, il faut rentrer à Sibenik avant **18:00**. Ce sera le seul jour sans voile mais nous avons finalement un peu de temps à l'heure du déjeuner. Au même endroit que le premier jsoir (la boucle est bouclées).
+
+On finit les restes et les gnochis. Dernier bain et direction la marina Mandalina !
+
+Étape à la station essence pour faire le plein avec une belle arrivée Ukullelesque sous les encouragements d'un équipage d'un bateau déjà à quai.
+
+Arrivé à la marina par un créneau d'Arnaud-Félix, réalisé à la perfection. Le checkup se passe nickel, nous prenons des douches de luxes et direction le bar pour l'apéro (on garde nos bonnes habitudes).
+
+Après des pizzas trop copieuses nous rentrons au bateau pour un dernier tarot. Juju gagne donc la partie de cette semaine.
+
+<div class="bloc-notes text-purple-900 p-4 mb-4 shadow-md">
+  <span class="border border-purple-900 p-1">Mots clés du voyage :</span>
+  <ul class="mt-2">
+    <li>– Oh pétard</li>
+    <li>– Mais noooon !</li>
+    <li>– So wild !</li>
+    <li>– Awesome !</li>
+    <li>– Julie... le vent !</li>
+  </ul>
+</div>
