--- a/source/croatie/20190831.html.md
+++ b/source/croatie/20190831.html.md
@@ -6,3 +6,5 @@ trip_slug: croatie
 top_image: https://res.cloudinary.com/dsapqckal/image/upload/c_fill,g_auto,h_250,w_2560/c_scale,fl_relative/croatie/20190825_110157_dcurbl.jpg
 draft: true
 ---
+
+ **5:00** Le reveil sonne. C'est dur ! Le taxi nous emmène à l'aéroport où une partie de l'équipe repart pour la France. Arnaud-Félix, Mathilde et Edwige, plus chanceux, restent encore quelques heures et profiterons de la belle ville de Split.
